css page profil

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,45 +1,61 @@
+/*****************************************************************************************
+*************************                                        *************************
+*************************              Main                      *************************
+*************************                                        *************************
+*****************************************************************************************/
 @font-face {
-    font-family: "font-1";
-    src: url(./assets/fonts/Lato-Light.ttf);
-  }
-  @font-face {
-    font-family: "font-2";
-    src: url(./assets/fonts/Lato-Regular.ttf);
-  }
-  @font-face {
-    font-family: "font-3";
-    src: url(./assets/fonts/Lato-Bold.ttf);
-  }
-  
-  $font-1: "font-1", sans-serif;
-  $font-2: "font-2", sans-serif;
-  $font-3: "font-3", sans-serif;
-  
-  $color-1: #FD2D01;
-  $color-2: #FFD7D7;
-  $color-3: #4E5166;
-  
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    //border: 1px solid red;
-    list-style-type: none;
-  }
-  
+  font-family: "font-1";
+  src: url(./assets/fonts/Lato-Light.ttf);
+}
+@font-face {
+  font-family: "font-2";
+  src: url(./assets/fonts/Lato-Regular.ttf);
+}
+@font-face {
+  font-family: "font-3";
+  src: url(./assets/fonts/Lato-Bold.ttf);
+}
 
-  ul {
-    display: flex;
-    margin-left: 1rem;
-  
-  li {
-    margin-left: 2rem;
-  }}
-  
+$font-1: "font-1", sans-serif;
+$font-2: "font-2", sans-serif;
+$font-3: "font-3", sans-serif;
+
+$color-1: #FD2D01;
+$color-2: #FFD7D7;
+$color-3: #4E5166;
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  //border: 1px solid red;
+  list-style-type: none;
+}
+
+
+ul {
+  display: flex;
+
+li {
+  margin-left: 2rem;
+}}
+
+body{
+  background: $color-2;
+}
 
 /*****************************************************************************************
 *************************                                        *************************
-*************************                NAVBAR                  *************************
+*************************              test                      *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+.h1-test{
+  margin-left: 5rem;
+}
+/*****************************************************************************************
+*************************                                        *************************
+*************************             Navbar                     *************************
 *************************                                        *************************
 *****************************************************************************************/
 
@@ -47,26 +63,12 @@ nav {
   //position: fixed;
   width: 100%;
   height: 45px;
-  border-radius: 6px;
+  //border-radius: 6px;
   //z-index: 10;
   //top: 0;
   background:$color-3;
 
-  @media screen and(max-width: 1251px) {
-    padding: 0 20px;
-  }
-
-  &::after {
-    content: "";
-    height: 45px;
-    width: 110%;
-    left: -20px;
-    top:0;
-    position: absolute;
-    backdrop-filter: blur(3px);
-    background: rgba(255, 255, 255, 0.86);
-    z-index: -8;
-  }
+ 
 
   .nav-container {
     display: flex;
@@ -82,13 +84,14 @@ nav {
       align-items: center;
       
       h3 {
-        transform: translate(15px, 2px);
+        margin-left:0.5em;
         font-size: 1.5rem;
         font-family: $font-3;
       }
       img {
-        height: 26px;
-        width: 26px;
+        height: 1.5rem;
+        width: 1.5rem;
+        margin-left:1em;
       }
     }
     
@@ -96,27 +99,25 @@ nav {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 35%;
-      justify-content: space-between;
       font-size: 1.2rem;
       
       .welcome {
-        transform: translateY(2px);
+      display: none;
 
-        @media screen and(max-width: 590px) {
-          display: none;
+        @media screen and(min-width: 590px) {
+          display: flex;
         }
         
         h5 {
           font-family: $font-3;
+          font-size: 1.4rem;
         }
       }
       
       li {
         
         img {
-          height: 24px;
-          width: 24px;
+          width: 2rem;
           cursor: pointer;
           display: grid;
           align-items: center;
@@ -128,16 +129,105 @@ nav {
   }
 }
 
+/*****************************************************************************************
+*************************                                        *************************
+*************************             leftNavbar                 *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+.left-nav-container {
+  position: relative;
+
+  .icons {
+    position: fixed;
+    z-index: 10;
+
+    @media screen and(max-width: 590px) {
+      margin: 2px 0 0 -9px;
+    }
+
+    .icons-bis {
+      position: absolute;
+      left: 10px;
+
+      a {
+        transition: 0.1s;
+        display: inline-block;
+
+        &:before {
+          transition: .15s ease;
+          transform: scale(0);
+          transform-origin: center;
+          z-index: -10;
+          content: "";
+          height: 45px;
+          width: 45px;
+          position: absolute;
+          background: $color-1;
+          border-radius: 50px;
+        }
+
+        &:hover {
+          transform: scale(1.02);
+        }
+        &:hover::before {
+          transform: scale(1);
+          @media screen and(max-width: 590px) {
+            background: $color-1;
+            height: 34px;
+            width: 34px;
+          }
+        }
+
+        img {
+          width:44px;
+          @media screen and(max-width: 590px) {
+            height: 34px;
+            width: 34px;
+          }
+        }
+      }
+
+      .active-left-nav {
+        position: relative;
+
+        &::after {
+          content: "";
+          height: 40px;
+          width: 5px;
+          position: absolute;
+          background: $color-1;
+          left: -7px;
+          bottom: 8px;
+          border-radius: 40px;
+          transform: scaleY(0);
+          animation: scale 1.5s ease forwards;
+
+          @keyframes scale {
+            to {
+              transform: scaleY(1);
+            }
+          }
+          @media screen and(max-width: 590px) {
+            height: 33px;
+            left: -8px;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
 
 
 
 /*****************************************************************************************
 *************************                                        *************************
-*************************           PROFIL PAGE                  *************************
+*************************                                        *************************
 *************************                                        *************************
 *****************************************************************************************/
-
-
 
 .profil-page {
   margin: 80px auto 0;
@@ -161,19 +251,20 @@ nav {
     border: none;
     background: $color-2;
     min-width: 490px;
-    width: 90%;
     text-align: center;
     margin: 0 auto;
     padding: 20px;
     border-radius: 20px;
+    height:35rem;
 
     @media screen and(max-width: 550px) {
       min-width: 200px;
     }
 
     .form-container {
-      display: grid;
-      grid-template-columns: 30% 70%;
+      display: block;
+      margin: auto;
+      width:20rem;
 
       @media screen and(max-width: 550px) {
         grid-template-columns: 1fr;
@@ -416,7 +507,7 @@ nav {
 
       @keyframes modal {
         to {
-          transform: scale(1) translate(-50%);
+          transform: scale(1)
         }
       }
 
@@ -435,21 +526,7 @@ nav {
       ul {
         margin: 20px 0 0;
         max-height: 500px;
-        overflow-y: scroll;
-        overflow-x: hidden;
-
-        &::-webkit-scrollbar {
-          width: 2px;
-        }
-        &::-webkit-scrollbar-track {
-          background: $color-2;
-        }
-        &::-webkit-scrollbar-thumb {
-          background: $color-1;
-        }
-        &::-webkit-scrollbar-thumb:hover {
-          background: #555;
-        }
+        display: block;
 
         li {
           display: grid;
@@ -488,6 +565,29 @@ nav {
   }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
 /*****************************************************************************************
 *************************                                        *************************
 *************************                                        *************************
@@ -495,8 +595,17 @@ nav {
 *****************************************************************************************/
 
 
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
 
-
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
 
 
 /*****************************************************************************************
@@ -505,4 +614,54 @@ nav {
 *************************                                        *************************
 *****************************************************************************************/
 
-  /*# sourceMappingURL=style.css.map */
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
+
+
+/*****************************************************************************************
+*************************                                        *************************
+*************************                                        *************************
+*************************                                        *************************
+*****************************************************************************************/
