--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -415,9 +415,15 @@ nav {
       overflow: hidden;
       max-width: 247px;
       text-overflow: ellipsis;
+      margin-top: -18px;
 
-      @media screen and(max-width: 440px) {
-        margin-top: -18px;
+      @media (min-width: $tablette) {
+        max-width: 510px;
+      }
+
+      @media (min-width: $desktop) {
+
+        max-width: 800px;
       }
     }
     .update-post {
