mise en plkace du 7:1 et validation supr user

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,3 +1,4 @@
+/*import de mon 7:1*/
 @font-face {
   font-family: "font-1";
   src: url(./assets/fonts/Lato-Light.ttf);
@@ -10,11 +11,6 @@
   font-family: "font-3";
   src: url(./assets/fonts/Lato-Bold.ttf);
 }
-/*****************************************************************************************
-*************************                                        *************************
-*************************              Main                      *************************
-*************************                                        *************************
-*****************************************************************************************/
 * {
   margin: 0;
   padding: 0;
@@ -95,11 +91,6 @@ body {
   font-weight: bold;
 }
 
-/*****************************************************************************************
-*************************                                        *************************
-*************************                  home                  *************************
-*************************                                        *************************
-*****************************************************************************************/
 .home {
   max-width: 1024px;
   overflow: hidden;
@@ -166,11 +157,6 @@ body {
   position: fixed;
 }
 
-/*****************************************************************************************
-*************************                                        *************************
-*************************             navbar                     *************************
-*************************                                        *************************
-*****************************************************************************************/
 nav {
   position: fixed;
   width: 100%;
@@ -236,11 +222,6 @@ nav .nav-container ul li img {
   height: 100%;
 }
 
-/*****************************************************************************************
-*************************                                        *************************
-*************************              card                      *************************
-*************************                                        *************************
-*****************************************************************************************/
 .card-container {
   display: grid;
   grid-template-columns: 66px 1fr;
@@ -644,11 +625,6 @@ nav .nav-container ul li img {
   background: #FD2D01;
 }
 
-/*****************************************************************************************
-*************************                                        *************************
-*************************            profil                      *************************
-*************************                                        *************************
-*****************************************************************************************/
 .profil-page {
   margin: 0 auto;
   max-width: 1024px;
@@ -837,11 +813,6 @@ nav .nav-container ul li img {
   transform: translateX(2px);
 }
 
-/*****************************************************************************************
-*************************                                        *************************
-*************************         newpostform                    *************************
-*************************                                        *************************
-*****************************************************************************************/
 .post-container {
   margin: 0 auto 0;
   padding: 16px 40px;
@@ -963,7 +934,7 @@ nav .nav-container ul li img {
   }
 }
 .post-container .post-form .card-container .card-right .content img {
-  width: 100%;
+  width: 50%;
   border-radius: 6px;
   margin-top: 12px;
 }
@@ -1034,11 +1005,6 @@ nav .nav-container ul li img {
   }
 }
 
-/*****************************************************************************************
-*************************                                        *************************
-*************************           leftnavbar                   *************************
-*************************                                        *************************
-*****************************************************************************************/
 .left-nav-container {
   position: relative;
   margin-top: 3rem;
